objects/Speaker__c.object
<CustomObject>
    <label>Speaker</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>